@@ -44,7 +44,7 @@ General
   & use them.
 
 - In reader.get_reader_class (& parser & writer too), should we be
-  importing 'standalone' or 'docutils.readers.standalone'?  (This would
+  importing "standalone" or "docutils.readers.standalone"?  (This would
   avoid importing top-level modules if the module name is not in
   docutils/readers.  Potential nastiness.)
 
@@ -97,7 +97,7 @@ reStructuredText Parser
 
 - Support generic hyperlink references to targets in other documents?
   Not in an HTML-centric way, though (it's trivial to say
-  ``http://www.whatever.com/doc#name``, and useless in non-HTML
+  ``http://www.example.com/doc#name``, and useless in non-HTML
   contexts).  XLink/XPointer?  ``.. baseref::``?  See Doc-SIG
   2001-08-10.
 
@@ -122,7 +122,7 @@ reStructuredText Parser
 
 - Implement the header row separator modification to table.el.  (Wrote
   to Takaaki Ota & the table.el mailing list on 2001-08-12, suggesting
-  support for '=====' header rows.  On 2001-08-17 he replied, saying
+  support for "=====" header rows.  On 2001-08-17 he replied, saying
   he'd put it on his to-do list, but "don't hold your breath".)
 
 - Tony says inline markup rule 7 could do with a *little* more
@@ -300,9 +300,11 @@ Directives
     than implicit.
 
     Within a "verse" element, should any other constructs be allowed?
-    Should lists be recognized?  The equivalent of block quotes (i.e.,
-    further indented blocks) would be nested verse elements.  These
-    could be "chorus" blocks.
+    Should lists be recognized?  No; verse blocks are variations on
+    paragraphs, and need not contain arbitrary nested body elements. 
+    However, the equivalent of block quotes (i.e., further indented
+    blocks) would be nested verse elements.  These could be "chorus"
+    blocks.
 
     Perhaps individually indented "continuation lines" should also be
     recognized (maybe with a "continuation" attribute on the "line"
@@ -312,7 +314,7 @@ Directives
         Ewan McTeagle (for Lassie O'Shea): ;;
 
             Lend us a couple of bob till Thursday.
-            I'm absolutely stint.
+            I'm absolutely skint.
             But I'm expecting a postal order and I can pay you back
                 as soon as it comes.
             Love, Ewan.
@@ -394,29 +396,118 @@ HTML Writer
   to the client?  Or up to an explicit distributor/filer?
 
 
-Coding Conventions
-==================
+Project Policies
+================
 
-This project shall follow the generic coding conventions as specified
-in the `Style Guide for Python Code`__ and `Docstring Conventions`__
-PEPs, with the following clarifications:
+Coding Conventions
+------------------
+
+The Docutils project shall follow the generic coding conventions as
+specified in the `Style Guide for Python Code`__ and `Docstring
+Conventions`__ PEPs, with the following clarifications:
 
 - 4 spaces per indentation level.  No tabs.
+
 - No one-liner compound statements (i.e., no ``if x: return``: use two
   lines & indentation), except for degenerate class or method
   definitions (i.e., ``class X: pass`` is O.K.).
-- Lines should be no more than 78 or 79 characters long.
-- "CamelCase" shall be used for class names (except for element
-  classes in docutils.nodes).
+
+- Lines should be no more than 78 characters long.
+
+- Use "CamelCase" for class names (except for element classes in
+  docutils.nodes).
+
 - Use "lowercase" or "lowercase_with_underscores" for function,
   method, and variable names.  For short names, maximum two joined
-  words, use lowercase (e.g. 'tagname').  For long names with three or
+  words, use lowercase (e.g. "tagname").  For long names with three or
   more joined words, or where it's hard to parse the split between two
-  words, use lowercase_with_underscores (e.g., 'note_explicit_target',
-  'explicit_target').  If in doubt, use underscores.
+  words, use lowercase_with_underscores (e.g., "note_explicit_target",
+  "explicit_target").  If in doubt, use underscores.
+
+- Use 'single quotes' for string literals, and """triple double
+  quotes""" for docstrings.
 
 __ http://www.python.org/peps/pep-0008.html
 __ http://www.python.org/peps/pep-0257.html
+
+
+CVS Check-ins
+-------------
+
+Instructions for CVS access can be found at
+http://sourceforge.net/cvs/?group_id=38414.  Anyone can access the CVS
+repository anonymously.  Only project developers can make changes.
+
+The `main source tree`_ ("docutils" CVS module) should always be kept
+in a stable state (usable and as problem-free as possible).  The
+Docutils project shall follow the `Python Check-in Policies`_ (as
+applicable), with particular emphasis as follows:
+
+- Before checking in any changes, run the entire Docutils test suite
+  to be sure that you haven't broken anything.  From a shell::
+
+      cd docutils/test
+      alltests.py
+
+- When adding new functionality (or fixing bugs), be sure to add test
+  cases to the test suite.  Practise test-first programming; it's fun,
+  it's addictive, and it works!
+
+- The sandbox_ is the place to put new, untried code.  See `Additions
+  to Docutils`_ below.
+
+Please consider subscribing to the appropriate `mailing lists`_.
+
+.. _main source tree:
+   http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/docutils/docutils/
+.. _Python Check-in Policies: http://www.python.org/dev/tools.html
+.. _sandbox:
+   http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/docutils/sandbox/
+.. _mailing lists: ../index.html#mailing-lists
+
+
+Additions to Docutils
+`````````````````````
+
+Additions to the project, such as new components, should be developed
+in in the sandbox_ until they're in good shape, usable, and reasonably
+complete.  Adding to the `main source tree`_ implies a commitment to
+the Docutils user community.
+
+- Why the sandbox?
+
+  Developers should be able to try out new components while they're
+  being developed for addition to main source tree.
+
+  The sandbox is a place to play around, to try out and share ideas.
+  It's a part of the CVS repository but it isn't distributed as part
+  of Docutils releases.  Each developer who wants to play in the
+  sandbox should create their own subdirectory (suggested name:
+  SourceForge ID, or given name + family initial).  It's OK to make a
+  mess!  But please, play nice.
+
+- "Good shape" means that the component code is clean, readable, and
+  free of junk (unused legacy code; by analogy with "junk DNA").
+
+- "Usable" means that the code does what it claims to do.  An "XYZ
+  Writer" should produce reasonable XYZ.
+
+- "Reasonably complete" means that the code must handle all input.
+  Here "handle" means that no input can cause the code to fail (cause
+  an exception, or silently and incorrectly produce nothing). 
+  "Reasonably complete" does not mean "finished" (no work left to be
+  done).  For example, a writer must handle every standard element
+  from the Docutils document model; for unimplemented elements, it
+  must *at the very least* warn that "Output for element X is not yet
+  implemented in writer Y".
+
+If you really want to check code into the main source tree, you can,
+but you'll have to be prepared to work on it intensively and complete
+it quickly.  People will start to use it and they will expect it to
+work!  If there are any issues with your code, or if you only have
+time for gradual development, you should put it in the sandbox first.
+It's easy to move code over to the main source tree once it's closer
+to completion.
 
 
 ..
